[workspace]
members = [
    ".",
    "codegen",
]

[package]
name = "windows-dll"
version = "0.1.1"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
description = "Macro for dynamically loading windows dll functions"
readme = "README.md"
homepage = "https://github.com/thisKai/rust-windows-dll"
license = "MIT"

[dependencies]
windows-dll-codegen = { version = "0.1.1", path = "codegen" }
thiserror = "1.0"
once_cell = "1.3"

[dependencies.winapi]
version = "0.3.7"
features = [
    "ntdef",
    "minwindef",
    "winerror",
    "libloaderapi",
    "winuser",
]
