[workspace]
members = [
    ".",
    "codegen",
]

[package]
name = "windows-dll"
version = "0.2.1"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
description = "Macro for dynamically loading windows dll functions"
readme = "README.md"
homepage = "https://github.com/thisKai/rust-windows-dll"
repository = "https://github.com/thisKai/rust-windows-dll"
license = "MIT"
keywords = ["windows", "win32", "dll", "macro", "ffi"]
categories = ["development-tools::ffi", "external-ffi-bindings", "api-bindings", "os::windows-apis"]

[dependencies]
windows-dll-codegen = { version = "0.2.0", path = "codegen" }
thiserror = "1.0"
once_cell = "1.3"

[dependencies.winapi]
version = "0.3.7"
features = [
    "ntdef",
    "minwindef",
    "winerror",
    "libloaderapi",
    "winuser",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"