[workspace]
members = [
    ".",
    "codegen",
]

[package]
name = "windows-dll"
version = "0.3.0"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
description = "Macro for dynamically loading windows dll functions"
readme = "README.md"
homepage = "https://github.com/thisKai/rust-windows-dll"
repository = "https://github.com/thisKai/rust-windows-dll"
license = "MIT"
keywords = ["windows", "win32", "dll", "macro", "ffi"]
categories = ["development-tools::ffi", "external-ffi-bindings", "api-bindings", "os::windows-apis"]

[features]
default = ["winapi"]

[dependencies]
windows-dll-codegen = { version = "0.3.0", path = "codegen" }
thiserror = "1"
once_cell = "1"

[dependencies.windows]
version = "0.33"
optional = true
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
]

[dependencies.winapi]
version = "0.3"
optional = true
features = [
    "ntdef",
    "minwindef",
    "winerror",
    "libloaderapi",
    "winuser",
]

[dev-dependencies]
minifb = "0.19"


[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
