[package]
name = "windows-dll-codegen"
version = "0.4.0"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
description = "Macro for dynamically loading windows dll functions"
readme = "../README.md"
homepage = "https://github.com/thisKai/rust-windows-dll"
repository = "https://github.com/thisKai/rust-windows-dll"
license = "MIT"
keywords = ["windows", "win32", "dll", "macro", "ffi"]
categories = ["development-tools::ffi", "external-ffi-bindings", "api-bindings", "os::windows-apis"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
proc-macro-crate = "0.1"

[dependencies.syn]
version = "1"
features = [
    "full",
    "extra-traits",
]
